# TgReminderBot

./: .gitignore  CMakeLists.txt  README.md  main.py  migration.py  reminder.py  reminders_manager.py  test.db
migration/: 1.sql  2.sql  3.sql  4.sql  6.sql
src/: auto_reminder.hpp  dynamic_storage.hpp  main.cpp  reminder_info.hpp  test.cpp  utils.hpp
